# SPHSimulator

./: .gitignore  CMakeConfigClang  CMakeConfigGcc  CMakeLists.txt  Makefile  README.md  SPHSimulator.cpp  buildProject  checkAll  clearProject  clearTags  copyshaders.cmake  magicScript  makeTags  runALL
Parallel/: CMakeLists.txt  Definitions.hpp  For.hpp  OMPFor.hpp  Parallel.hpp  ParallelImpl.hpp  SerialFor.hpp  TBBFor.cpp  TBBFor.hpp
Rendering/: CMakeLists.txt  DisplayView.cpp  DisplayView.hpp  HardCodedShaders.cpp  HardCodedShaders.hpp  Shader.cpp  Shader.hpp  WriteFunctions.cpp  WriteFunctions.hpp  copyshaders.cmake
Rendering/shaders/: forceShader.fs  forceShader.gs  pointShader.fs  pointShader.vs
Simulation/: BoundingBox.hpp  CMakeLists.txt  HashTable.cpp  HashTable.hpp  Kernels.cpp  Kernels.hpp  Neighbour.hpp  Particle.hpp  ParticleAttributes.hpp  ParticleCloud.hpp  Reorderer.cpp  Reorderer.hpp  SPHSolver.cpp  SPHSolver.hpp  Settings.cpp  Settings.hpp
Statistics/: CMakeLists.txt  Statistics.cpp  Statistics.hpp
Util/: Matrix.hpp  ParallelFor.hpp  ZValue.hpp
animations/: metaball_00.avi  metaball_01.avi  metaball_02.avi  metaball_03.avi
performanceTests/: InitConfig.ini  RenderConfig.ini  SimConfig.ini  run  runAll
performanceTests/AllIn/: BCConfig.ini  InitConfig.ini  RenderConfig.ini  SPHConfig.ini  SimConfig.ini  correctResults.txt  run
performanceTests/Dripping/: InitConfig.ini  SPHConfig.ini  SimConfig.ini  correctResults.txt
performanceTests/Faucet/: ParallelConfig.ini  SPHConfig.ini  SimConfig.ini  correctResults.txt
src/: BoundingBox.hpp  DisplayView.cpp  DisplayView.hpp  HashTable.hpp  Kernels.cpp  Kernels.hpp  Particle.hpp  SPHApp.cpp  SPHSimulator.cpp  SPHSolver.cpp  SPHSolver.hpp  Settings.cpp  Settings.hpp  Shader.cpp  Shader.hpp  Statistics.hpp  WriteFunctions.cpp  WriteFunctions.hpp  files  thingsToDo
src/shaders/: forceShader.vs
